[package]
name = "network-record-replay"
version = "0.1.0"
authors = ["Lind, Niclas <niclas.lind@volvocars.com>"]
edition = "2018"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[dependencies]
tonic = "0.3.1"
grpcio = "0.6.0"
protobuf = "2.17.0"
futures = "0.3.5"
tokio = {version = "0.2.*", features = ["full"] }

[build-dependencies]
protoc-grpcio = "2.0.0"